second commit html structure added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,49 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>Test_01</title>
+  <meta charset="UTF-8" />
+  <title>Invader Zim's Resume</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-<div>something</div>
+  <main>
+    <header>
+      <section>
+        <nav class="site-nav">
+          <ul>
+            <li><a href="#0">Blog</a></li>
+            <li><a href="#0">Twitter</a></li>
+            <li><a href="#0">Skype</a></li>
+            <li><a href="#0">Youtube</a></li>
+          </ul>
+        </nav>
+        <h1 id="zim-name">Invader Zim</h1>
+        <h2 id="job-title">Inerplanitary destruction Specialist</h2>
+        <h3>About Me</h3>
+        <div id="about-me">
+          <img id="zim-image" src="http://pre05.deviantart.net/9ec4/th/pre/i/2013/087/c/e/invader_zim_by_contreras19-d5zm4cl.png" alt="Invader Zim" />
+
+          <p class="standard-p">Bacon ipsum dolor amet ground round cupim tongue chicken short ribs pancetta alcatra beef ribs bresaola hamburger bacon filet mignon pork belly shankle tail. Meatloaf bacon tongue capicola, pastrami venison salami ham pig pork belly tenderloin.
+            </p>
+          <div id="contact">
+            email:
+            <a href="mailto:invaderzim@gmail.com?subject=Zim's Resume">invadrerzim@gmail.com</a> website: <a href="">invaderzim.com</a> phone: (303)333-3333<br> address: 2111 fake road lane Denver CO 80777
+          </div>
+        </div>
+      </section>
+    </header>
+
+    <footer class="footer">
+      <ul>
+        <li><a href="#0">Planets Invaded</a></li>
+        <li><a href="#0">Favorite Galixies</a></li>
+        <li><a href="#0">Food</a></li>
+        <li><a href="#0">Gur</a></li>
+        <li><a href="#0">Black Holes</a></li>
+      </ul>
+    </footer>
+  </main>
 </body>
+
 </html>
